# code-quality-actions

./: .editorconfig  .gitignore  NOTICE  README.md  package-lock.json  package.json
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  codeql.yml  test.yml
coverage/: action.yml  coverage.js
report/: action.yml  report.js
src/: shared.js
test/: CMakeLists.txt  main.cpp
